--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="meat_status">Meat Status:</string>
     <string name="color">Color:</string>
     <string name="details">Details</string>
+    <string name="process">Processing…</string>
 </resources>
