--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="color">Color:</string>
     <string name="details">Details</string>
     <string name="process">Processing…</string>
+    <string name="retrieve">Retrieving…</string>
 </resources>
