--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="details">Details</string>
     <string name="process">Processing…</string>
     <string name="retrieve">Retrieving…</string>
+    <string name="loading">Loading</string>
 </resources>
