--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="color_name">Color Name:</string>
     <string name="retrieve">Retrieving…</string>
     <string name="loading">Loading</string>
+    <string name="under_development">Under Development</string>
+    <string name="development_desc">The page you\'re looking for is currently under development and will be back soon.</string>
 </resources>
